# anari_metal

./: .gitignore  AnariMetalDevice.h  AnariMetalDevice.mm  AnariMetalDeviceQueries.cpp  AnariMetalDeviceQueries.h  AnariMetalGlobalState.h  AnariMetalGlobalState.mm  AnariMetalLibrary.cpp  AnariMetalMath.h  CMakeLists.txt  Object.cpp  Object.h  README.md  anari_metal_device.json
array/: Array.cpp  Array.h
camera/: Camera.cpp  Camera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
frame/: Frame.h  Frame.mm
include/anari/ext/anari_metal/: anariNewAnariMetalDevice.h
metal_helper/: MetalHelper.h  MetalHelper.mm
renderer/: DefaultRenderer.h  DefaultRenderer.mm  ForwardPipeline.h  ForwardPipeline.mm  HybridPipeline.h  HybridPipeline.mm  HybridRenderer.h  HybridRenderer.mm  Pipeline.h  Pipeline.mm  Renderer.h  Renderer.mm
scene/: Group.cpp  Group.h  Group.mm  Instance.cpp  Instance.h  Instance.mm  World.cpp  World.h  World.mm
scene/light/: DirectionalLight.h  DirectionalLight.mm  Light.h  Light.mm
scene/surface/: Surface.cpp  Surface.h  Surface.mm
scene/surface/geometry/: Geometry.h  Geometry.mm  TriangleGeometry.h  TriangleGeometry.mm
scene/surface/material/: Material.h  Material.mm  Matte.h  Matte.mm  PBM.h  PBM.mm
scene/surface/material/sampler/: ImageSampler.h  ImageSampler.mm  Sampler.h  Sampler.mm
scene/volume/: Volume.cpp  Volume.h
scene/volume/spatial_field/: SpatialField.cpp  SpatialField.h
